--- a/helm/stackql/templates/secret-stackql-config.yaml
+++ b/helm/stackql/templates/secret-stackql-config.yaml
@@ -32,6 +32,7 @@ stringData:
   {{- if .Values.extraSecrets }}
   {{- range $path, $config := .Values.extraSecrets }}
   {{ $path }}: |
-    {{- tpl $config $ | nindent 4 -}}
+    {{- tpl $config $ | nindent 4 }}
   {{- end -}}
   {{- end -}}
+
