--- a/helm/superset-primer/templates/service-account.yaml
+++ b/helm/superset-primer/templates/service-account.yaml
@@ -14,30 +14,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-apiVersion: v2
-# appVersion: "v0.5" # i do not see the upside in this duplication
-description: stackql is an SQL implementation for CRUD on arbitrary resources.
-name: stackql
-# icon: https://artifacthub.io/image/68c1d717-0e97-491f-b046-754e46f46922@2x
-home: https://stackql.io/
-keywords:
-  - SQL
-  - IAC
-  - Infrastructure as Code
-  - Transactional
-  - CRUD
-  - Analytical
-  - OLAP
-  - OLTP
-sources:
-  - https://github.com/stackql/stackql
-maintainers:
-  - name: General Kroll
-    email: generalkroll0@gmail.com
-    url: https://github.com/general-kroll-4-life
-version: 0.1.6
-dependencies:
-  - name: postgresql
-    version: 12.4.2
-    repository: https://charts.bitnami.com/bitnami
-    condition: postgresql.enabled
+{{- if .Values.serviceAccount.create }}
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ include "primer.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/name: {{ include "primer.name" . }}
+    helm.sh/chart: {{ include "primer.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- if semverCompare "> 1.6" .Capabilities.KubeVersion.GitVersion }}
+    kubernetes.io/cluster-service: "true"
+    {{- end }}
+    addonmanager.kubernetes.io/mode: Reconcile
+  {{- if .Values.serviceAccount.annotations }}
+  annotations: {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
+  {{- end }}
+{{- end -}}
