--- a/helm/superset-primer/Chart.yaml
+++ b/helm/superset-primer/Chart.yaml
@@ -16,28 +16,17 @@
 #
 apiVersion: v2
 # appVersion: "v0.5" # i do not see the upside in this duplication
-description: stackql is an SQL implementation for CRUD on arbitrary resources.
-name: stackql
-# icon: https://artifacthub.io/image/68c1d717-0e97-491f-b046-754e46f46922@2x
-home: https://stackql.io/
+description: superset-primer is a tool to polulate dashboards.
+name: superset-primer
+home: https://github.com/stackql/stackql-cloud
 keywords:
   - SQL
-  - IAC
-  - Infrastructure as Code
-  - Transactional
-  - CRUD
   - Analytical
   - OLAP
-  - OLTP
 sources:
-  - https://github.com/stackql/stackql
+  - https://github.com/stackql/stackql-cloud/helm/superset-primer
 maintainers:
   - name: General Kroll
     email: generalkroll0@gmail.com
     url: https://github.com/general-kroll-4-life
-version: 0.1.6
-dependencies:
-  - name: postgresql
-    version: 12.4.2
-    repository: https://charts.bitnami.com/bitnami
-    condition: postgresql.enabled
+version: 0.0.3
