--- a/helm/superset-primer/templates/secret-stackql-sql-startup.yaml
+++ b/helm/superset-primer/templates/secret-stackql-sql-startup.yaml
@@ -14,30 +14,21 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-apiVersion: v2
-# appVersion: "v0.5" # i do not see the upside in this duplication
-description: stackql is an SQL implementation for CRUD on arbitrary resources.
-name: stackql
-# icon: https://artifacthub.io/image/68c1d717-0e97-491f-b046-754e46f46922@2x
-home: https://stackql.io/
-keywords:
-  - SQL
-  - IAC
-  - Infrastructure as Code
-  - Transactional
-  - CRUD
-  - Analytical
-  - OLAP
-  - OLTP
-sources:
-  - https://github.com/stackql/stackql
-maintainers:
-  - name: General Kroll
-    email: generalkroll0@gmail.com
-    url: https://github.com/general-kroll-4-life
-version: 0.1.6
-dependencies:
-  - name: postgresql
-    version: 12.4.2
-    repository: https://charts.bitnami.com/bitnami
-    condition: postgresql.enabled
+apiVersion: v1
+kind: Secret
+metadata:
+  name: '{{ template "primer.fullname" . }}-primer-support-config'
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app: {{ template "primer.fullname" . }}
+    chart: {{ template "primer.chart" . }}
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
+type: Opaque
+stringData:
+  {{- if .Values.startupSupportScripts }}
+  {{- range $path, $config := .Values.startupSupportScripts }}
+  {{ $path }}: |
+    {{- tpl $config $ | nindent 4 -}}
+  {{- end -}}
+  {{- end -}}
